# github-to-dingtalk

./: .gitignore  LICENSE  Makefile  README.md  README_zh.md  a  config.example.yml  pyproject.toml  s.yml
deploy/aliyun-fc/: build.sh  s.yml
hooks/: pre-commit
notification/: conf.py  index.py  notifier.py
notification/DingtalkChatbot-1.5.3.dist-info/: METADATA  RECORD  top_level.txt
notification/charset_normalizer-2.0.9.dist-info/: RECORD
src/github_to_dingtalk/: app.py  config.py  notifier.py  router.py
tests/: __init__.py  base.py  test_app.py  test_config.py  test_discussion.py  test_fork.py  test_issue.py  test_notifier.py  test_pull_request.py  test_push.py  test_router.py  test_star.py  test_watch.py
tests/test_handlers/: test_base.py  test_branch_protection_rule.py  test_check_run.py  test_check_suite.py  test_code_scanning_alert.py  test_commit_comment.py  test_create.py  test_delete.py  test_dependabot_alert.py  test_deploy_key.py  test_deployment.py  test_deployment_status.py  test_discussion.py  test_fork.py  test_generic.py  test_gollum.py  test_installation.py  test_issue.py  test_label.py  test_member.py  test_membership.py  test_merge_group.py  test_meta.py  test_milestone.py  test_org_block.py  test_organization.py  test_package.py  test_page_build.py  test_ping.py  test_projects_v2.py  test_projects_v2_item.py  test_public.py  test_pull_request.py  test_pull_request_review_thread.py  test_push.py  test_registry_package.py  test_release.py  test_repository.py  test_repository_vulnerability_alert.py  test_secret_scanning_alert.py  (+11 more)
(+51 files in other folders)
