[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-to-dingtalk"
version = "0.1.0"
description = "Notify GitHub repository events to DingTalk"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pyyaml",
    "dingtalkchatbot",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx2",
    "ruff",
    "ty",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
